--- a/public/html/index.html
+++ b/public/html/index.html
@@ -37,10 +37,9 @@
 		</section>
 		<footer class="info">
 			<p>Double-click to edit a todo</p>
-			<p>Created by <a href="https://vk.com/refre5h">refresh.jss</a></p>
+			<p>Created by <a href="https://vk.com/refre5h">refresh.jss )</a></p>
 			<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 		</footer>
-		<script src="/node_modules/todomvc-common/base.js"></script>
 		<script src="/js/app.js"></script>
 	</body>
 </html>
